# SokS

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c.yml  cmake.yml
SokS-base/: TODO  dbg.h  graph.c  graph.dot  graph.h  helper.c  host_utils.c  host_utils.h  main.c  main.h  targets.c
base/: SoksConfig.h.in  TODO  dbg.h  graph.c  helper.c  helper.h  host_utils.c  host_utils.h  main.c  targets.c  targets.h
tests/: CMakeLists.txt  run_tests.sh  test_graph.dot  unit_test.h  utests.c
